[gd_scene load_steps=8 format=3 uid="uid://be136da6h4aqe"]

[ext_resource type="Script" path="res://scripts/controllers/game_controller.gd" id="1_vmno1"]
[ext_resource type="Resource" uid="uid://c2skkng411wmo" path="res://scripts/resources/varied/theme.tres" id="2_3aagb"]
[ext_resource type="Shader" path="res://shaders/circle.gdshader" id="3_2dumt"]

[sub_resource type="Animation" id="Animation_cf71s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:material:shader_parameter/circle_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.2]
}

[sub_resource type="Animation" id="Animation_mmwj7"]
resource_name = "intro"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:material:shader_parameter/circle_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.666667, 1.5),
"transitions": PackedFloat32Array(1, 0.594603, 1, 0.732043),
"update": 0,
"values": [0.0, 0.107383, 0.107383, 1.2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7lr7i"]
_data = {
"RESET": SubResource("Animation_cf71s"),
"intro": SubResource("Animation_mmwj7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5y63"]
shader = ExtResource("3_2dumt")
shader_parameter/circle_radius = 1.2
shader_parameter/circle_position_x = -0.2
shader_parameter/circle_position_y = -0.025
shader_parameter/color = null

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_vmno1")
quiz = ExtResource("2_3aagb")
color_right = Color(0, 0.443137, 0, 1)
color_wrong = Color(0.627451, 0, 0, 1)

[node name="AudioCorrect" type="AudioStreamPlayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -6.0
offset_right = 1162.0
offset_bottom = 650.0
color = Color(0.0741, 0.29523, 0.39, 1)

[node name="Content" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -597.145
offset_top = -305.903
offset_right = 597.145
offset_bottom = 305.903
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionInfo" type="VBoxContainer" parent="ColorRect/Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -323.0
offset_right = 323.0
offset_bottom = 213.0
grow_horizontal = 2

[node name="QuestionText" type="Label" parent="ColorRect/Content/QuestionInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
text = "QUIZ GAME


"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionHolder" type="VBoxContainer" parent="ColorRect/Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -487.0
offset_top = -320.0
offset_right = 487.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Button_Option" type="Button" parent="ColorRect/Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button_Option2" type="Button" parent="ColorRect/Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button_Option3" type="Button" parent="ColorRect/Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button_Option4" type="Button" parent="ColorRect/Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameOver" type="ColorRect" parent="ColorRect/Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -26.0
offset_right = 5.70972
offset_bottom = 32.1945
grow_horizontal = 2
grow_vertical = 2
color = Color(0.376471, 0, 0, 1)

[node name="Title" type="Label" parent="ColorRect/Content/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.001
offset_top = -307.998
offset_right = 259.999
offset_bottom = -156.998
grow_horizontal = 2
grow_vertical = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="ColorRect/Content/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -68.4998
offset_right = 61.5
offset_bottom = 68.4998
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0/0"
vertical_alignment = 1

[node name="Button" type="Button" parent="ColorRect/Content/GameOver"]
visible = false
layout_mode = 0
offset_left = 376.0
offset_top = 482.0
offset_right = 876.0
offset_bottom = 636.0

[node name="circle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="circle"]
libraries = {
"": SubResource("AnimationLibrary_7lr7i")
}

[node name="ColorRect" type="ColorRect" parent="circle/AnimationPlayer"]
material = SubResource("ShaderMaterial_i5y63")
offset_right = 1152.0
offset_bottom = 648.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ColorRect/Content/GameOver/Button" to="." method="_on_button_pressed"]
